# SynSMB

./: PIG_test.ipynb  README.md  pig.py  pyproject.toml
.ipynb_checkpoints/: pig-checkpoint.py
examples/data/: era5_Interior.grib  era5_Interior.grib.5b7b6.idx  era5_PIG.grib  era5_PIG.grib.5b7b6.idx  era5_Thwaites.grib  era5_Thwaites.grib.5b7b6.idx
syn_smb/: __init__.py  dataset.py
syn_smb/data/: plotting.py  preprocessing.py  smb_dataset.py
syn_smb/filter/: bandpass.py
syn_smb/forecast/: ar.py  ar_annual.py  bandpass.py  gaussian_noise.py  generator.py  generator2.py  sarima.py
syn_smb/generation/: syn_gen.py
syn_smb/processing/: preprocessing.py
tests/: test_dataset.py  test_preprocess.py
