[project]
name = "syn-smb"
version = "0.1.0"
description = ""
authors = [
    {name = "cmarkovsky",email = "cameron.markovsky@utah.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "xarray (>=2025.7.1,<2026.0.0)",
    "cfgrib (>=0.9.15.0,<0.10.0.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "pmdarima (>=2.0.4,<3.0.0)",
    "numpy (==1.26.4)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.tests.dependencies]
pytest = "^8.4.1"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"


[tool.poetry.group.visualization.dependencies]
seaborn = "^0.13.2"

